--- a/static/style.less
+++ b/static/style.less
@@ -7,7 +7,9 @@
 @fontimp: #FFFFFF;
 @bgcolor: #161C1E;
 @blue: #3465a4;
+@lblue: lighten(@blue, 10%);
 @lgrey: #888a85 + #222;
+@llgrey: lighten(@lgrey, 10%);
 @dv: 0.5em;
 @em: (1 / 16) + 0em; // unit conversion
 @fontsmono: "Ubuntu Mono", "Courier New", "Courier", monospace;
@@ -21,7 +23,7 @@ body {
 	background: @bgcolor;
 	color: @fontcolor;
 	font-family: "Trebuchet MS", Arial, sans-serif;
-	font-size: 0.9em;
+	font-size: 0.85em;
 }
 html, body, img {
 	margin: 0;
@@ -49,7 +51,7 @@ a {
 	font-size: 2.3em;
 	#panel {
 		float: right;
-		font-size: 0.5em;
+		font-size: 0.4em;
 		a {
 			color: @lgrey;
 			&:before {
@@ -59,7 +61,7 @@ a {
 				content: ' ]';
 			}
 			&:before, &:after {
-				color: lighten(@blue, 10%) !important;
+				color: @lblue !important;
 			}
 			&:hover {
 				color: @fontcolor !important;
@@ -97,14 +99,13 @@ a {
 
 // Commons for menus (item, selected)
 #menu, .frame {
-	.item {
+	.item, a {
 		float: left;
 		display: block;
 
 		&:before, &:after {
 			color: @blue;
-			font-weight: bold;
-			font-size: 1.3em;
+			font-size: 1.1em;
 		}
 		&:hover:before, &:hover:after {color: @lgrey;}
 	}
@@ -117,10 +118,14 @@ a {
 	}
 
 	.switch { //switch - open/close, close message, confirm sth
-		color: @fontimp;
 		float: right !important;
+		font-size: 0.9em;
 		&:before, &:after {
+			color: @lgrey;
 			margin: 0 !important;
+		}
+		&:hover, &:hover:before, &:hover:after {
+			color: @fontimp;
 		}
 	}
 }
@@ -130,17 +135,17 @@ a {
 	font-size: 1.1em;
 	margin-top: @dv;
 
-	.item {
+	.item, a {
 		padding: 0;
 
-		&:before {
-			content: '/';
-			margin-right: 0.9em;
-		}
-		&:after {
-			content: '/';
-			margin-left: 0.9em;
-		}
+		// &:before {
+		// 	content: '/';
+		// 	margin-right: 0.9em;
+		// }
+		// &:after {
+		// 	content: '/';
+		// 	margin-left: 0.9em;
+		// }
 	}
 }
 
@@ -168,8 +173,8 @@ a {
 	when (iscolor(@clr)) and (ispercentage(@fde)) and (iscolor(@2clr)) and (isstring(@fstr))
 {
 	background-color: mix(@clr, @2clr, @fde);
-	border-left: 1px solid @clr;
-	border-right: 1px solid @clr;
+	border-left: 2px solid @clr;
+	border-right: 2px solid @clr;
 	&:before {
 		color: lighten(@clr,10%);
 		content: @fstr;
@@ -178,7 +183,7 @@ a {
 // Information, confirmation, warning, critical
 .frame.inf, .frame.ok, .frame.wrn, .frame.crt {
 	margin: @dv 0;
-	padding: @dv;
+	padding: @dv*4/5;
 	border-top-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 	&:before {
@@ -187,12 +192,20 @@ a {
 		font-size: 1.1em;
 		margin-right: 0.25em;
 	}
+	.switch {
+		&:before {
+			content: '[';
+		}
+		&:after {
+			content: ']';
+		}
+	}
 }
 .frame.inf {.framecolor(#729fcf, 40%, "(i)");}
-.frame.ok  {.framecolor(#8ae234, 40%, "(+)");}
+.frame.ok  {.framecolor(#8ae234, 40%, "(+)");} //(+)
 .frame.wrn {.framecolor(#cc0000, 40%, "[!]");}
 .frame.crt {
-	@darkclr:darken(#2e3436, 15%); // is: near black; was: black
+	@darkclr: darken(#2e3436, 15%); // is: near black; was: black
 	.framecolor(#cc0000, 0%, "!#!",@darkclr);
 }
 
