--- a/static/style.less
+++ b/static/style.less
@@ -143,15 +143,6 @@ a {
 
 	.item, a {
 		padding: 0;
-
-		// &:before {
-		// 	content: '/';
-		// 	margin-right: 0.9em;
-		// }
-		// &:after {
-		// 	content: '/';
-		// 	margin-left: 0.9em;
-		// }
 	}
 }
 
@@ -236,11 +227,6 @@ a {
 	overflow: auto;
 	line-height: 1.75;
 
-	&:first-line {
-		font-size: 1.3em;
-		font-variant: small-caps;
-	}
-
 	p, blockquote {
 		text-align: justify;
 		.mrg(2);
@@ -305,26 +291,43 @@ a {
 		.mrg(1,3);
 		line-height: 1.9em;
 
+		input {
+			-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			-ms-box-sizing: border-box;
+			box-sizing: border-box;
+		}
+
 		input[type=text], input[type=file], input[type=password], input[type=submit],
-			input[type=search], textarea {
+			input[type=search], input[type=email], textarea {
 			margin: 1px 0;
 			padding: 1px 4px;
 			font: inherit;
 			color: @fontcolor;
 			border: none;
 			background: darken(@bgcolor,4%);
+			border-radius: 2px;
+			padding: 0.1em 0.3em;
 		}
 		input[type=radio], input[type=checkbox] {
 			margin: 1px 3px 0 6px;
 		}
 		input[type=submit] {
-			@bstyle: 1px solid @lgrey;
+			@bstyle: 2px solid @lgrey;
 			border-left: @bstyle;
 			border-right: @bstyle;
 			border-top: none;
 			border-bottom: none;
 			border-top-left-radius: 5px;
 			border-bottom-right-radius: 5px;
+			padding: 0.1em 0.3em;
+			margin-top: 0.3em;
+		}
+		.form-label, label {
+			display: block;
+		}
+		label {
+			margin-bottom: 0.5em;
 		}
 	}
 }
