--- a/static/style.less
+++ b/static/style.less
@@ -319,7 +319,9 @@ a {
 			border-top: none;
 			border-bottom: none;
 			border-top-left-radius: 5px;
+			border-top-right-radius: 0;
 			border-bottom-right-radius: 5px;
+			border-bottom-left-radius: 0;
 			padding: 0.1em 0.3em;
 			margin-top: 0.3em;
 		}
