--- a/static/style.less
+++ b/static/style.less
@@ -56,6 +56,13 @@ a {
 	small {
 		color: @lgrey;
 	}
+	.orange {
+		color: #f57900;
+	}
+	small.orange {
+		font-size: 0.6em;
+		font-style: italic;
+	}
 }
 
 // Header
