Massive mayhem closes #2, almost #14, closes #6, #12

--- a/static/style.less
+++ b/static/style.less
@@ -36,6 +36,7 @@ a {
 }
 .clear {clear: both; visibility: hidden;}
 .center {text-align: center;}
+.white {color: @fontimp;}
 
 // Main frame
 #main {
