I'm looking for a place to start... And finish, 'cause just look at these files, how many of them are here?

--- a/static/style.less
+++ b/static/style.less
@@ -37,6 +37,7 @@ a {
 .clear {clear: both; visibility: hidden;}
 .center {text-align: center;}
 .white {color: @fontimp;}
+.fright {float:right;}
 
 // Main frame
 #main {
