--- a/static/style.scss
+++ b/static/style.scss
@@ -1,28 +1,28 @@
-/*! revCMS stylesheet | codename "neon" | (c) 2013 Maxx
+/*! revCMS stylesheet | codename /neon/ | (c) 2013 Maxx
  * colors based on Tango palette
  * DO NOT MODIFY OR REDISTRIBUTE WITHOUT AUTHOR'S PERMISSION!
  */
 // Variables
-@fontcolor: #D5D9D1;
-@fontimp: #FFFFFF;
-@bgcolor: #161C1E;
-@blue: #3465a4;
-@lblue: lighten(@blue, 10%);
-@lgrey: #888a85 + #222;
-@llgrey: lighten(@lgrey, 10%);
-@dv: 0.5em;
-@em: (1 / 16) + 0em; // unit conversion
-@fontsmono: "Ubuntu Mono", "Courier New", "Courier", monospace;
+$fontcolor: #D5D9D1;
+$fontimp: #FFFFFF;
+$bgcolor: #161C1E;
+$blue: #3465a4;
+$lblue: lighten($blue, 10%);
+$lgrey: #888a85 + #222;
+$llgrey: lighten($lgrey, 10%);
+$dv: 0.5em;
+$em: (1 / 16) + 0em; // unit conversion
+$fontsmono: 'Ubuntu Mono', 'Courier New', 'Courier', monospace;
 // Mixins
-.mrg(@dmul: 1, @lmul: 0) when (isnumber(@dmul)) and (isnumber(@lmul)) {
-	margin: 0 0 (@dmul*@dv) (@lmul*@dv);
+@mixin mrg($dmul: 1, $lmul: 0) {
+	margin: 0 0 ($dmul * $dv) ($lmul * $dv);
 }
 
 // General setup, commons
 body {
-	background: @bgcolor;
-	color: @fontcolor;
-	font-family: "Trebuchet MS", Arial, sans-serif;
+	background: $bgcolor;
+	color: $fontcolor;
+	font-family: 'Trebuchet MS', Arial, sans-serif;
 	font-size: 0.85em;
 }
 html, body, img {
@@ -36,7 +36,7 @@ a {
 }
 .clear {clear: both; visibility: hidden;}
 .center {text-align: center;}
-.white {color: @fontimp;}
+.white {color: $fontimp;}
 .fright {float:right;}
 
 // Main frame
@@ -48,15 +48,15 @@ a {
 
 //logo
 #logo {
-	color: @fontimp;
+	color: $fontimp;
 	margin-bottom: 4px;
-	width: 100%;
+	float: left;
 	font-size: 2.3em;
 	.blue {
-		color: @blue;
+		color: $blue;
 	}
 	small {
-		color: @lgrey;
+		color: $lgrey;
 	}
 	.orange {
 		color: #f57900;
@@ -72,9 +72,9 @@ a {
 	float: right;
 	font-size: 1em;
 	height: 0;
-	// margin-top: -2.3em;
+	color: $lgrey;
 	a {
-		color: @lgrey;
+		color: $lgrey;
 		&:before {
 			content: '[ ';
 		}
@@ -82,12 +82,12 @@ a {
 			content: ' ]';
 		}
 		&:before, &:after {
-			color: @lblue !important;
+			color: $lblue !important;
 		}
 		&:hover {
-			color: @fontcolor !important;
+			color: $fontcolor !important;
 			&:before, &:after {
-				color: @fontimp !important;
+				color: $fontimp !important;
 			}
 		}
 	}
@@ -95,9 +95,12 @@ a {
 
 // Footer
 #footer {
-	margin: 2*@dv 2*@dv 0 2*@dv;
+	//margin: 2*$dv 2*$dv 0 2*$dv;
 	font-size: 0.9em;
-	color: @lgrey;
+	color: $lgrey;
+	position: absolute;
+	bottom: $dv/2;
+	right: $dv;
 }
 
 // Generics, these hold some kind of content
@@ -119,28 +122,28 @@ a {
 		display: block;
 
 		&:before, &:after {
-			color: @blue;
+			color: $blue;
 			font-size: 1.1em;
 		}
-		&:hover:before, &:hover:after {color: @lgrey;}
+		&:hover:before, &:hover:after {color: $lgrey;}
 	}
 
 	#cur { //current
-		color: @fontimp;
+		color: $fontimp;
 		font-weight: bold;
 
-		&:before, &:after {color: @fontimp !important;} //override
+		&:before, &:after {color: $fontimp !important;} //override
 	}
 
 	.switch { //switch - open/close, close message, confirm sth
 		float: right !important;
 		font-size: 0.9em;
 		&:before, &:after {
-			color: @lgrey;
+			color: $lgrey;
 			margin: 0 !important;
 		}
 		&:hover, &:hover:before, &:hover:after {
-			color: @fontimp;
+			color: $fontimp;
 		}
 	}
 }
@@ -148,10 +151,14 @@ a {
 // Menu - 1st level
 #menu {
 	font-size: 1.1em;
-	margin-top: @dv;
+	margin-top: $dv;
 
 	.item, a {
-		padding: 0;
+		padding: 0 $dv;
+		&:before {
+			content: ':';
+			margin-right: $dv/2;
+		}
 	}
 }
 
@@ -175,26 +182,24 @@ a {
 }
 
 // Hacky (and messy) way to get proper colors
-.framecolor(@clr: white, @fde: 50%,@fstr: "", @2clr: @bgcolor)
-	when (iscolor(@clr)) and (ispercentage(@fde)) and (iscolor(@2clr)) and (isstring(@fstr))
-{
-	background-color: mix(@clr, @2clr, @fde);
-	border-left: 2px solid @clr;
-	border-right: 2px solid @clr;
+@mixin framecolor($clr: white, $fde: 50%,$fstr: '', $2clr: $bgcolor) {
+	background-color: mix($clr, $2clr, $fde);
+	border-left: 2px solid $clr;
+	border-right: 2px solid $clr;
 	&:before {
-		color: lighten(@clr,10%);
-		content: @fstr;
+		color: lighten($clr,10%);
+		content: $fstr;
 	}
 }
 // Information, confirmation, warning, critical
 .frame.inf, .frame.ok, .frame.wrn, .frame.crt {
-	margin: @dv 0;
-	padding: @dv*4/5;
+	margin: $dv 0;
+	padding: $dv*4/5;
 	border-top-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 	&:before {
 		font-weight: bold;
-		font-family: @fontsmono;
+		font-family: $fontsmono;
 		font-size: 1.1em;
 		margin-right: 0.25em;
 	}
@@ -207,38 +212,38 @@ a {
 		}
 	}
 }
-.frame.inf {.framecolor(#729fcf, 40%, "(i)");}
-.frame.ok  {.framecolor(#8ae234, 40%, "(+)");} //(+)
-.frame.wrn {.framecolor(#cc0000, 40%, "[!]");}
+.frame.inf {@extend framecolor(#729fcf, 40%, '(i)');}
+.frame.ok  {@extend framecolor(#8ae234, 40%, '(+)');} //(+)
+.frame.wrn {@extend framecolor(#cc0000, 40%, '[!]');}
 .frame.crt {
-	@darkclr: darken(#2e3436, 15%); // is: near black; was: black
-	.framecolor(#cc0000, 0%, "!#!",@darkclr);
+	$darkclr: darken(#2e3436, 15%); // is: near black; was: black
+	@extend .framecolor(#cc0000, 0%, '!#!', $darkclr);
 }
 
 // Information panel
 #info {
-	color: @fontimp;
+	color: $fontimp;
 	font-weight: bold;
 	font-size: 1.2em;
 	padding: 10px 0 5px 5px;
 	#date {
-		color: @fontcolor;
+		color: $fontcolor;
 		float: right;
 		font-size: 0.8em;
 		font-weight: normal;
-		.mrg(0.7,0.7);
+		@extend mrg(0.7,0.7);
 	}
 }
 
 // Content
 #content, .content {
-	margin-top: @dv;
+	margin-top: $dv;
 	overflow: auto;
 	line-height: 1.75;
 
 	p, blockquote {
 		text-align: justify;
-		.mrg(2);
+		@extend mrg(2);
 	}
 	p {
 		text-indent: 1em;
@@ -247,19 +252,19 @@ a {
 		border-bottom: 1px dashed;
 		display: inline;
 		&:hover {
-			color: @fontimp;
+			color: $fontimp;
 			border-bottom: 1px solid;
 			display: inline;
 		}
 	}
-	code, blockquote {.mrg(2,1);}
+	code, blockquote {@extend mrg(2,1);}
 	blockquote {
-		border-left: 3px double @fontimp;
+		border-left: 3px double $fontimp;
 		display: inline-block;
 		padding: 2px 0 2px 5px;
 		small {
 			font-size: 0.9em;
-			color: @lgrey;
+			color: $lgrey;
 			display: block;
 			&:before {
 				font-weight: bold;
@@ -267,18 +272,18 @@ a {
 		}	}
 	}
 	code, .code {
-		font-family: @fontsmono;
+		font-family: $fontsmono;
 	}
 	code {
 		text-align: left;
 		display: block;
-		.mrg(2,1);
+		@extend mrg(2,1);
 	}
 	h1, h2, h3 {
-		color: @fontimp;
+		color: $fontimp;
 		display: block;
 		font-weight: bold;
-		.mrg(1);
+		@extend mrg(1);
 	}
 	h1 {font-size: 2em;}
 	h2 {font-size: 1.5em;}
@@ -286,7 +291,7 @@ a {
 
 	ol, ul {
 		display: block;
-		.mrg(2);
+		@extend mrg(2);
 		padding: 0 0 0 2em;
 		li {
 			display: list-item;
@@ -297,48 +302,63 @@ a {
 	.imgdesc {}
 
 	form {
-		.mrg(1,3);
+		@extend mrg(1,3);
 		line-height: 1.9em;
+	}
+	.button {
+		/*appearance: button;
+		-webkit-appearance: push-button;
+		-moz-appearance: button;
+		-ms-appearance: button;
+		-o-appearance: button;*/
+		cursor: default;
+		text-decoration: none;
+	}
+	input, .button {
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-ms-box-sizing: border-box;
+		box-sizing: border-box;
+	}
 
-		input {
-			-webkit-box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			-ms-box-sizing: border-box;
-			box-sizing: border-box;
-		}
+	input.big, textarea.big {
+		width: 35%;
+	}
+	textarea.big {
+		height: 7.5em;
+	}
 
-		input[type=text], input[type=file], input[type=password], input[type=submit],
-			input[type=search], input[type=email], textarea {
-			margin: 1px 0;
-			padding: 1px 4px;
-			font: inherit;
-			color: @fontcolor;
-			border: none;
-			background: darken(@bgcolor,4%);
-			border-radius: 2px;
-			padding: 0.1em 0.3em;
-		}
-		input[type=radio], input[type=checkbox] {
-			margin: 1px 3px 0 6px;
-		}
-		input[type=submit] {
-			@bstyle: 2px solid @lgrey;
-			border-left: @bstyle;
-			border-right: @bstyle;
-			border-top: none;
-			border-bottom: none;
-			border-top-left-radius: 5px;
-			border-top-right-radius: 0;
-			border-bottom-right-radius: 5px;
-			border-bottom-left-radius: 0;
-			padding: 0.1em 0.3em;
-			margin-top: 0.3em;
-		}
-		.form-label, label {
-			display: block;
-		}
-		label {
-			margin-bottom: 0.5em;
-		}
+	input[type=text], input[type=file], input[type=password], input[type=submit],
+		input[type=search], input[type=email], textarea, .button {
+		margin: 1px 0;
+		padding: 1px 4px;
+		font: inherit;
+		color: $fontcolor;
+		border: none;
+		background: darken($bgcolor,4%);
+		border-radius: 2px;
+		padding: 0.1em 0.3em;
+	}
+	input[type=radio], input[type=checkbox] {
+		margin: 1px 3px 0 6px;
+	}
+	input[type=submit], .button {
+		$bstyle: 2px solid $lgrey;
+		border-left: $bstyle;
+		border-right: $bstyle;
+		border-top: none;
+		border-bottom: none;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 5px;
+		border-bottom-left-radius: 0;
+		padding: 0.1em 0.3em;
+		margin-top: 0.3em;
+	}
+	.form-label, label {
+		display: block;
+	}
+	label {
+		margin-bottom: 0.5em;
 	}
 }
