Massive overhaul. Targetting stable release.

--- a/appdata/style.scss
+++ b/appdata/style.scss
@@ -1,4 +1,4 @@
-/*! revCMS stylesheet | codename /neon/ | (c) 2014 Maxx
+/*! r3vCMS stylesheet | codename /neon/ | (c) 2014 Maxx
  * colors based on Tango palette
  * DO NOT MODIFY OR REDISTRIBUTE WITHOUT AUTHOR'S PERMISSION!
  */
@@ -380,7 +380,7 @@ a {
 	// Application-specific styles
 	//
 	// ------------------------------------------------------------------
-	
+
 
 	div.elem-item.task, div.elem-item.list {
 		margin-top: 2*$dv;
