Here be dragons

--- a/mod/r3v/static/style.scss
+++ b/mod/r3v/static/style.scss
@@ -375,6 +375,15 @@ a {
 		width: 75%;
 	}
 
+	.errorhttp {
+		.trace {
+			font-size: 0.9em;
+			text-align: left;
+			margin: 35px auto 0;
+			width: 70%;
+		}
+	}
+
 	// ==================================================================
 	//
 	// Application-specific styles
