I actually don't know what to write here

--- a/mod/r3v/static/style.scss
+++ b/mod/r3v/static/style.scss
@@ -1,7 +1,8 @@
-/*! r3vCMS stylesheet | codename /neon/ | (c) 2014 Maxx
- * colors based on Tango palette
- * DO NOT MODIFY OR REDISTRIBUTE WITHOUT AUTHOR'S PERMISSION!
- */
+/* r3v engine [neon] css (c) 2014 Maxx *
+ * colors based on Tango palette   /\  *
+ * Licensed under CC BY-NC-SA     /\/\ *
+ * * * * * * * * * * * * * * * * * * * *
+*/
 // Variables
 $fontcolor: #D5D9D1;
 $fontimp: #FFFFFF;
