--- a/mod/r3v/static/style.scss
+++ b/mod/r3v/static/style.scss
@@ -6,7 +6,7 @@
 // Variables
 $fontcolor: #D5D9D1;
 $fontimp: #FFFFFF;
-$bgcolor: #161C1E;
+$bgcolor: #0F1114;//#161C1E;
 $blue: #3465a4;
 $grey: darken($fontcolor, 10%);
 $lblue: lighten($blue, 10%);
@@ -69,7 +69,7 @@ a {
 	.orange {
 		color: #FFB800;//#f57900;
 	}
-	small.orange {
+	small.blue {
 		font-size: 0.6em;
 		font-style: italic;
 	}
@@ -104,6 +104,7 @@ a {
 // Footer
 #footer {
 	font-size: 0.9em;
+	font-family: $fontsmono;
 	color: $lgrey;
 	position: absolute;
 	bottom: $dv/2;
@@ -249,8 +250,12 @@ a {
 }
 
 .errorhttp {
+	.emsg {
+		color: white;
+		font-size: 1.3em;
+	}
 	.trace {
-		color: $grey;
+		color: darken($grey, 20%);
 		font-size: 0.9em;
 		text-align: left;
 		margin: 15px auto 0;
