--- a/mod/tmx/static/res/style.scss
+++ b/mod/tmx/static/res/style.scss
@@ -1,4 +1,4 @@
-/* r3v engine SCSS (c) 2014 Maxx *
+/* themaxx.pl SCSS (c) 2014 Maxx *
  * colors based on Tango palette *
  * Licensed under CC BY-NC-SA    *
  * * * * * * * * * * * * * * * * *
