--- a/mod/tmx/static/res/style.scss
+++ b/mod/tmx/static/res/style.scss
@@ -1,4 +1,4 @@
-/* themaxx.pl SCSS (c) 2014 Maxx *
+/*!themaxx.pl SCSS (c) 2014 Maxx *
  * colors based on Tango palette *
  * Licensed under CC BY-NC-SA    *
  * * * * * * * * * * * * * * * * *
@@ -47,31 +47,40 @@ a {
 .white {color: $fontimp;}
 .fright {float:right;}
 
-// Main frame
-#main {
-	margin: 10px auto 0;
+
+// Content settings
+.cnt-set {
+	margin: 0 auto;
 	width: 70%;
 	min-width: 320px;
+	display: block;
 }
 
-//logo
-#logo {
+$logo_bg: darken($bgcolor, 5%);
+$logo_border: 1px solid lighten($bgcolor, 5%);
+
+#logowrap {
+	background: $logo_bg;
+	width: 100%;
+	padding: 10px 5px 5px;
 	color: $fontimp;
+	border-bottom: $logo_border;
+}
+
+// Logo/header
+#logo {
 	margin-bottom: 4px;
-	float: left;
+	display: block;
 	font-size: 2.3em;
 	.blue {
 		color: $blue;
 	}
 	small {
 		color: $lgrey;
-	}
-	.orange {
-		color: #FFB800;//#f57900;
-	}
-	small.blue {
-		font-size: 0.6em;
-		font-style: italic;
+		&.blue {
+			font-size: 0.6em;
+			font-style: italic;
+		}
 	}
 }
 
@@ -112,130 +121,46 @@ a {
 }
 
 // Generics, these hold some kind of content
-#menu, .frame, #info, #content {
+#info, #content {
 	overflow: auto;
 	width: 100%;
 }
 
 // Commons for menus (item, selected)
-#menu, .frame {
-	.item, a {
+#menu {
+	overflow:auto;
+	font-size: 1.15em;
+	margin: -1px $dv*1.3 $dv*2;
+
+	a {
+		background: $logo_bg;
 		float: left;
 		display: block;
+		padding: 0.8*$dv 1.5*$dv $dv;
+		border-left: $logo_border;
+		border-right: $logo_border;
+		border-bottom: $logo_border;
+		margin-right: 1px;
 
-		&:before, &:after {
-			color: $blue;
-			font-size: 1.1em;
-		}
-		&:hover:before, &:hover:after {
-			color: $lgrey;
+		&:hover {
+			border-bottom-color: white;
 		}
 
 		&.right {
 			float: right;
+			color: darken($fontcolor, 20%);
+			padding-left: $dv;
+			padding-right: $dv;
+			margin: 0 0 0 $dv/2;
 		}
 	}
 
-	#cur { //current item
+	// Selected item
+	#sel {
 		color: $fontimp;
 		font-weight: bold;
-
-		&:before, &:after {
-			color: $fontimp !important;
-		}
+		border-bottom-color: $blue;
 	}
-
-	.switch { //switch - open/close, close message, confirm sth
-		float: right !important;
-		font-size: 0.9em;
-		&:before, &:after {
-			color: $lgrey;
-			margin: 0 !important;
-		}
-		&:hover, &:hover:before, &:hover:after {
-			color: $fontimp;
-		}
-	}
-}
-
-// Menu - 1st level
-#menu {
-	font-size: 1.1em;
-	margin-top: $dv;
-
-	.item, a {
-		padding: 0 $dv;
-		&:before {
-			content: ':';
-			margin-right: $dv/2;
-		}
-	}
-}
-
-// Frame - Informations, Warnings, probably additional menus
-.frame {
-	// noop
-}
-.frame.mnu {// Menus
-	.item {
-		padding-bottom: 0.2em;// 0.5em;
-
-		&:before {
-			content: '|';
-			margin-right: 0.5em;
-		}
-		&:after {
-			content: '|';
-			margin-left: 0.5em;
-		}
-	}
-}
-
-// Hacky (and messy) way to get proper colors
-@mixin framecolor($clr: white, $fde: 50%,$fstr: '', $2clr: $bgcolor) {
-	background-color: mix($clr, $2clr, $fde);
-	border-left: 2px solid $clr;
-	border-right: 2px solid $clr;
-
- 	&:before {
-		color: lighten($clr,10%);
-		content: $fstr;
-	}
-}
-// Information, confirmation, warning, critical
-.frame.inf, .frame.ok, .frame.wrn, .frame.crt {
-	margin: $dv 0;
-	padding: ($dv*4)/5;
-	border-top-left-radius: 5px;
-	border-bottom-right-radius: 5px;
-	&:before {
-		font-weight: bold;
-		font-family: $fontsmono;
-		font-size: 1.1em;
-		margin-right: 0.25em;
-	}
-	.switch {
-		&:before {
-			content: '[';
-		}
-		&:after {
-			content: ']';
-		}
-	}
-}
-
-.frame.inf {
-	@include framecolor(#729fcf, 40%, '(i)');
-}
-.frame.ok  {
-	@include framecolor(#8ae234, 40%, '(+)');
-}
-.frame.wrn {
-	@include framecolor(#cc0000, 40%, '[!]');
-}
-.frame.crt {
-	$darkclr: darken(#2e3436, 15%); // is: near black; was: black
-	@include framecolor(#cc0000, 0%, '!#!', $darkclr);
 }
 
 // Information panel
@@ -273,7 +198,6 @@ a {
 	word-wrap: normal;
 	overflow-wrap: break-word;
 	line-height: 1.75;
-	// float: left;
 
 	p, blockquote {
 		text-align: justify;
@@ -410,20 +334,12 @@ a {
 			}
 			&[color="#f57900"]:after {
 				content: 'f';
-				color: white;
 			}
 			&[color="#cc0000"] {
 				color: #559fdc;
 			}
 		}
 	}
-
-	// ==================================================================
-	//
-	// Application-specific styles
-	//
-	// ------------------------------------------------------------------
-
 
 	div.elem-item.task, div.elem-item.list {
 		margin-top: 2*$dv;
@@ -467,17 +383,4 @@ div.rpanel {
 	top: 5px;
 	width: 10%;
 	text-align: right;
-
-	a.panel-item {
-		display: block;
-	}
-	.panel-requests {
-		border-bottom: 1px solid white;
-		padding-bottom: $dv;
-		a.option {
-			color: $fontimp;
-			font-style: italic;
-			font-size: 0.8em;
-		}
-	}
 }
